yamls/portfolio-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-frontend
  namespace: portfolio
spec:
  selector:
    matchLabels:
      app: portfolio-frontend
  replicas: 3 
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      containers:
      - name: portfolio-frontend
        image: froopsie/portfolio:latest
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend
  namespace: portfolio
spec:
  selector:
    app: portfolio-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP


---

apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend
  namespace: portfolio
spec:
  selector:
    app: portfolio-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
