yamls/portfolio-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-app-1
  namespace: portfolio
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
  hostnames:
  - "portfolio.jeremyroos.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: portfolio-frontend
      port: 80
